classDiagram
    class Note {
        +int Number
        +string Name
        +string Content
        +User Client
        +Skill Skill
        +List~Note~ Notes
        +string ToString()
        +static Note FromString(string input)
        +IEnumerable~Note~ GetAll()
        +Note GetNote(int number)
        +void Add(Note note)
        +void Update(Note note)
        +void Delete(Note note)
    }

    class User {
        +string Name
        +string Email
        +string Password
        +bool IsAdmin
        +List~Users~ Users
        +string ToString()
        +static User FromString(string input)
        +IEnumerable~User~ GetAll()
        +User GetUser(string email)
        +void AddUser(User user)
        +void UpdateUser(User user)
        +void DeleteUser(User user)
        +bool ValidateUserLogin(string email, string password)
    }

    class Module {
        +int Number
        +string Name
        +string Description
        +List~Module~ Modules
        +string ToString()
        +static Module FromString(string input)
        +IEnumerable~Module~ GetAll()
        +Module GetModule(int number)
        +void AddModule(Module module)
        +void UpdateModule(Module module)
        +void DeleteModule(Module module)
        -void RewriteFile(List~Module~ modules)
    }

    class Skill {
        +int Number
        +string Name
        +string Description
        +Level Level //Enum
        +Module Module
        +string EmotionMatch
        +List~Skill~ Skills
        +List~string~ Emotions
        +string ToString()
        +static Skill FromString(string input)
        +IEnumerable~Skill~ GetAll()
        +Skill GetSkill(int number)
        +void AddSkill(Skill skill)
        +void UpdateSkill(Skill skill)
        +void DeleteSkill(Skill skill)
        -void RewriteFile(List~Skill~ skills)
    }

        class Level {
        <<enumeration>>
        None = 0
        Low = 1
        Medium = 2
        High = 3
    }

    Note --> User : Client
    Note --> Skill : Skill
    Skill --> Module
    Skill --> Level